# LPDiD

./: .gitignore  CHANGELOG.md  CLUSTERING_FIX_SUMMARY.md  FINAL_FEATURES.md  FORK_WARNING_FINAL_SOLUTION.md  LICENSE  LICENSE.txt  MANIFEST.in  MANIFEST.in.txt  MEMORY_FIX_SUMMARY.md  MP_TYPE_PARAMETER.md  Makefile.txt  PARALLEL_PROCESSING_FIX.md  POLARS_FORK_FIX.md  QUICKSTART.md  README.md  SPAWN_CONFIGURATION_RESOLUTION.md  SPAWN_CONFIGURATION_SUMMARY.md  SPAWN_MEMORY_EFFICIENCY_SOLUTION.md  demo_min_time_features.py  gitignore.txt  lpdid.py  package_init.sh  pyproject.toml  requirements.txt  setup.py  test_ccs_filtering.py  test_large_dataset.py  test_lpdid_fixes.py  test_mp_type_parameter.py  test_optimization.py  test_polars_fix.py  test_spawn_configuration.py  test_vectorization_fix.py
LPDiD/: __init__.py  lpdid.py  lpdid_old.py  lpdid_spawn_fix.py  spawn_enforcer.py  utils.py  wildboot_fallback.py
docs/: ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  PACKAGE_STRUCTURE.md  PARALLEL_IMPLEMENTATION_SUMMARY.md  PARALLEL_PROCESSING.md
examples/: example_iv_interactions.py  example_simulation_data.py  example_usage.py  parallel_processing_example.py
internal_tests/: apply_lpdid_to_synth_data.ipynb  test_all_features.py  test_basic_functionality.py  test_interactions.py  test_lpdid_poisson.py  test_min_time_features.py  test_min_time_selection_independence.py  test_package_structure.py  test_parallel_processing.py  test_survival_analysis_further.py  test_swap_pre_diff.py  test_wild_bootstrap.py
lpdid/: __init__.py  lpdid.py
lpdid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_lpdid.py
