[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "LPDiD"
version = "0.7.0"
description = "Local Projections Difference-in-Differences (LP-DiD) for Python"
readme = "README.md"
authors = [
    {name = "Peter John Lambert", email = "p.j.lambert@lse.ac.uk"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.1.0",
    "pyfixest>=0.18.0",
    "scipy>=1.5.0",
    "joblib>=1.0.0",
]

[project.optional-dependencies]
wildbootstrap = ["wildboottest>=0.1.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
all = ["LPDiD[wildbootstrap,dev]"]

[project.urls]
Homepage = "https://github.com/peterlambert/LPDiD"
Documentation = "https://github.com/peterlambert/LPDiD/blob/main/README.md"
Repository = "https://github.com/peterlambert/LPDiD.git"
Issues = "https://github.com/peterlambert/LPDiD/issues"

[tool.setuptools]
packages = ["LPDiD"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["internal_tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
